# rust_learn

./: .gitignore  README.md
docs/: 01_1_hello_rust.md  01_2_cargo.md  02_intro_guessing_game.md  03_basis.md  04_1_ownership.md  04_2_references_borrowing.md  04_3_slice.md  05_struct.md  06_enum.md  07_projects_management.md  08_collections.md
sources/: hello_rust.rs
sources/guessing_game/: Cargo.toml
sources/guessing_game/src/: main.rs
sources/hashmap/: Cargo.toml
sources/hashmap/src/: main.rs
sources/hello_cargo/: Cargo.toml
sources/project_management/: Cargo.toml
sources/rectangle/: Cargo.toml
sources/rectangle/src/: main.rs
sources/string/: Cargo.toml
sources/string/src/: main.rs
sources/vector/: Cargo.toml
sources/vector/src/: main.rs
